<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="Exercicio 2"
            app:titleTextColor="@color/white"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/margem">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nome"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:background="?attr/colorPrimary" />

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:background="?attr/colorPrimary" />

            <RadioGroup
                android:id="@+id/rdgSexo"
                android:layout_width="218dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbMasculino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/masculino" />

                <RadioButton
                    android:id="@+id/rdbFeminino"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feminino" />

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:background="?attr/colorPrimary" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:background="?attr/colorPrimary" />

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preferencias"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:background="?attr/colorPrimary" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/chkMusica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/musica" />

                <CheckBox
                    android:id="@+id/chkCinema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cinema" />

                <CheckBox
                    android:id="@+id/chkEsporte"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/esporte" />

                <CheckBox
                    android:id="@+id/chkGastronomia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gastronomia" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notificacoes"
                android:textSize="16sp"
                android:textColor="#FFFFFF"
                android:background="?attr/colorPrimary" />

            <Switch
                android:id="@+id/swtNotificacoes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:textOff="@string/off"
                android:textOn="@string/on"
                tools:ignore="UseSwitchCompatOrMaterialXml"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnExibir"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/exibir"
                    android:layout_margin="@dimen/margem"
                    android:background="@color/gray"
                    android:textColor="@color/white"
                    />

                <Button
                    android:id="@+id/btnLimpar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/limpar"
                    android:layout_margin="@dimen/margem"
                    android:background="@color/gray"
                    android:textColor="@color/white"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lblDados"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@android:color/darker_gray"
                android:layout_margin="@dimen/margem"
                android:padding="@dimen/margem"
                android:layout_marginBottom="@dimen/margem"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/txtNome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtSexo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtTelefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtPreferencias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/txtNotificacoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
